# feos-estimator

./: Cargo.toml  README.md  license-apache  license-mit
src/: binary_vle.rs  dataset.rs  estimator.rs  impl_dataset.rs  lib.rs  liquid_density.rs  loss.rs  python.rs  vapor_pressure.rs
