[package]
name = "feos-estimator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feos-core = { git = "https://github.com/feos-org/feos-core", branch = "main" }
quantity = "0.3"
ndarray = "0.15"
thiserror = "1.0"
ndarray-stats = "*"